# node-xlog

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  index.js  package-lock.json  package.json
demo/: test.js
scripts/: postinstall.js
src/: XLogModule.cc  XLogModule.h
